--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                   </section>
                   </main>
 
-                  <foster>
+                  <footer>
                     <p>I can code!</p>
-                    <foster>
+                    <footer>
                   </body>
                 </html>
                
